--- a/style.css
+++ b/style.css
@@ -10,6 +10,8 @@ body{
 }
 .img-galaxy{
     width: 18vw;
+    border-radius: 15px;
+    margin: 10px;
 }
 main{
    display: flex;
@@ -20,9 +22,21 @@ header{
     flex-direction: column;
     align-items: center;
     width: 100%;
+    /*! height: 15vh; */
 }
 .box-list{
     margin-top: 2%;
     background-color: #000;
     width: 30vw;
+    padding: 15px;
+}
+h2 {
+    width: 100%;
+    height: 15vh;
+    background: white;
+    color: black;
+    font-family: Arial;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
